# study-buddy

./: .editorconfig  .env.template  .gitmodules  Makefile  alias.sh  docker-compose.dev.yml  run_tests.sh
backend/: .env.template  .pre-commit-config.yaml  Dockerfile.base  Dockerfile.dev  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1607fb32ab6e_initial_add_file_file_chunk.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/db/: deps.py  session.py
backend/app/db/models/: file.py  file_chunk.py
backend/app/models/: file.py  file_chunk.py
backend/app/schemas/: file.py
backend/tests/: test_file_upload.py  test_health.py  test_ping.py  test_summary.py
backend/tests/api/: test_files.py
