[project]
name = "app"
version = "0.1.0"
description = "FastAPI interacting with LLM, Vector DB and Relational DB"
authors = [{ name = "Sebastian Soto M", email = "s.m.sebastian.n@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
